Themes - when a theme image is missing, fall back to normal frame background image.

Currently, only inactive incognito frame images have this fallback.
Now the fallback applies to inactive normal frames as well as active
incognito frames.

There's a comment in tab_strip.cc which indicates the tab
strip code expects this to be the case:

  [...]the theme provider will create the incognito frame image
       from the normal frame image [...]

This restores behavior that was present before 2ccbda7969b7a1a4f374 [formerly 8e23c7996d890fdc77fc]

Bug: 845976
Change-Id: Iee6487373c8651ef76a1899ae5d68c5884e9d597
Reviewed-on: https://chromium-review.googlesource.com/1080277
Commit-Queue: Evan Stade <estade@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563458}
Former-commit-id: 330fc0661f88a200ab9e2d58cb5812dc56c57602